--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 # See http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 spring.thymeleaf.cache=false
 spring.main.show-banner=false
-logging.level.jdbc=OFF
-logging.level.jdbc.sqltiming=DEBUG
-logging.level.jdbc.resultsettable=DEBUG
 
 spring.banner.location=classpath:banner.txt
 spring.shell.welcome.message=Welcome to Phantom Shell! Type 'help' to begin.
+
+# ---------------- LOGGING ---------------------
+# Disable console logging (cleaner shell)
+logging.pattern.console=
+
+# Enable file logging
+logging.file.name=${LOG_FILE_NAME:phantom-shell.log}
+
+# Log levels & format
+# logging.level.root=INFO
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+logging.level.org.springframework.shell=INFO
+logging.level.org.jline=INFO
