--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.main.show-banner=false
 spring.banner.location=classpath:banner.txt
 spring.shell.welcome.message=Welcome to Phantom Shell! Type 'help' to begin.
 
+# Enable interactive mode (required for Windows)
+spring.shell.interactive.enabled=true
+spring.shell.script.enabled=true
+
 # ---------------- LOGGING ---------------------
 # Disable console logging (cleaner shell)
 logging.pattern.console=
