--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ logging.file.name=${LOG_FILE_NAME:phantom-shell.log}
 # Log levels & format
 # logging.level.root=INFO
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.level.org.jline=DEBUG
 
 logging.level.org.springframework.shell=INFO
 logging.level.org.jline=INFO
