--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
           <artifactId>jline-native</artifactId>
           <version>3.25.0</version>
         </dependency>
+        <dependency>
+          <groupId>org.jline</groupId>
+          <artifactId>jline-terminal-jna</artifactId>
+          <version>3.25.0</version>
+        </dependency>
       </dependencies>
     </dependencyManagement>
 
@@ -89,7 +94,10 @@
             <artifactId>jansi</artifactId>
             <version>2.4.1</version>
         </dependency>
-        
+        <dependency>
+          <groupId>org.jline</groupId>
+          <artifactId>jline-terminal-jna</artifactId>
+        </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
