--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,11 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>-H:DynamicProxyConfigurationResources=META-INF/native-image/phantom-shell/proxy-config.json</buildArg>
+                            </buildArgs>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
