--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>jna-platform</artifactId>
             <version>5.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.hierynomus</groupId>
+            <artifactId>sshj</artifactId>
+            <version>0.37.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
